--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "md5": "^2.3.0"
+    "knex": "^1.0.7",
+    "md5": "^2.3.0",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
