--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.7",
+    "mongodb": "^4.5.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
