--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/gmihaic/FaceRecognitionBrainServer#readme",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "clarifai-nodejs-grpc": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
