updates: split into controllers, port in .env file

--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,5 @@ SQLDatabaseName="smart-brain"
 mongoConnectionString="mongodb://localhost:27017/smartbrain"
 
 ClarifaiAPIKey="YOUR-CLARIFAI-API-KEY-HERE"
+
+serverPort=3610
