--- a/.env.dev
+++ b/.env.dev
@@ -10,4 +10,4 @@ mongoConnectionString="mongodb://localhost:27017/smartbrain"
 
 ClarifaiAPIKey="YOUR-CLARIFAI-API-KEY-HERE"
 
-serverPort=3610
+SERVERPORT=3610
