--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "homepage": "https://github.com/gmihaic/FaceRecognitionBrainServer#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "canvas": "^2.9.1",
     "clarifai-nodejs-grpc": "^8.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "face-api.js": "^0.22.2",
     "knex": "^1.0.7",
     "mongodb": "^4.5.0",
     "node-email-validation": "^1.0.4",
+    "node-fetch": "^3.2.4",
     "pg": "^8.7.3"
   },
   "devDependencies": {
